# VaultDocs

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.agents/rules/: vaultdocs.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: d2be618d8b17_create_users_table.py
backend/: Dockerfile
backend/src/vaultdocs/: main.py
backend/src/vaultdocs/api/: router.py
backend/src/vaultdocs/api/dependencies/: auth.py
backend/src/vaultdocs/api/v1/: auth.py  documents.py  folders.py  health.py  router.py  users.py
backend/src/vaultdocs/core/: logging_config.py  security.py  settings.py
backend/src/vaultdocs/db/: base.py  dependencies.py  mixins.py  session.py
backend/src/vaultdocs/models/: __init__.py  user.py
backend/src/vaultdocs/schemas/: auth.py
backend/src/vaultdocs/services/: auth.py
docs/: 01_Project_Overview.md  02_Software_Requirements_Specification.md  03_System_Architecture.md  04_Database_Design.md  05_API_Design.md  06_Development_Guide.md  06_Git_Workflow.md  07_Branching_Strategy.md  07_Deployment_Guide.md  08_Coding_Standards.md  08_Product_Roadmap.md  09_Sprint_Planning.md  10_Deployment_Strategy.md  11_Future_Roadmap.md  API_Design.md  Architecture.md  Branching_Strategy.md  Coding_Standards.md  Database_Design.md  Deployment_Guide.md  Git_Workflow.md  Requirements.md  Sprint_Planning.md
frontend/: README.md
