# =============================================================================
# VaultDocs — pyproject.toml
# =============================================================================
# Central configuration for the Python project: metadata, dependencies,
# build system, and tool settings (Ruff, mypy, pytest).
# =============================================================================

[project]
name = "VaultDocs"
version = "0.1.0"
description = "VaultDocs — Secure Document Management System"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
    { name = "VaultDocs Team" },
]
keywords = ["document-management", "fastapi", "clean-architecture"]

dependencies = [
    # --- Web Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # --- Validation & Settings ---
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # --- Security ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    # --- Utilities ---
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    # --- Testing ---
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "httpx>=0.28.0",
    # --- Code Quality ---
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    # --- Development Utilities ---
    "ipython>=8.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/vaultdocs"]

# =============================================================================
# Tool Configuration
# =============================================================================

# --------------- Ruff ---------------
[tool.ruff]
target-version = "py313"
line-length = 99
src = ["backend/src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff-specific rules
]
ignore = [
    "S101",  # Allow assert in tests
    "B008",  # Allow Depends() in function args (FastAPI pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["vaultdocs"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = ["S101", "ARG", "S106"]

# --------------- mypy ---------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# --------------- pytest ---------------
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=backend/src/vaultdocs",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires database/services)",
    "e2e: End-to-end tests (full stack)",
    "slow: Slow-running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# --------------- Coverage ---------------
[tool.coverage.run]
source = ["backend/src/vaultdocs"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]
fail_under = 80
show_missing = true
